+ Sửa lại tạo event thì tạo luôn 2 collection speaker và sponsor + Thêm thông tin collection loại gì ở popup update + Thêm khung màu cho login ở admin + Thêm class để biết đang ở menu nào admin và client

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Guest/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Guest/Index.cshtml
@@ -160,6 +160,9 @@
 
         $(document).ready(function () {
             InitGuestDatatable();
+
+            $('.menu').removeClass('menu-active');
+            $('.menu-guest').addClass('menu-active');
         });
 
         $('#btnAddGuest').on('click', function () {
