--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
@@ -93,10 +93,19 @@
             <div class="col-lg-3 col-xs-6" id="collectionTypeContainer-@(collection.EventCollectionID)">
                 <!-- small box -->
                 <div class="small-box bg-teal">
-                    
-                    <div id="collectionContainer-@(collection.EventCollectionID)" class="inner inner-custom" data-toggle="modal" data-target="#collectionEditModal" onclick="openModalEdit(@(collection.EventCollectionID),@(collection.EventId),@(collection.TypeId), '@(collection.Name)', '@(collection.Description)', '@(collection.IsActive)')">
-                        <h4 id="collectionName-@(collection.EventCollectionID)">@(collection.Name)</h4>
-                    </div>
+                    @if (collection.IsActive)
+                    {
+                        <div id="collectionContainer-@(collection.EventCollectionID)" class="inner inner-custom" data-toggle="modal" data-target="#collectionEditModal" onclick="openModalEdit(@(collection.EventCollectionID),@(collection.EventId),@(collection.TypeId), '@(collection.Name)', '@(collection.Description)', '@(collection.CollectionType.Name)', true)">
+                            <h4 id="collectionName-@(collection.EventCollectionID)">@(collection.Name)</h4>
+                        </div>
+                    }
+                    else
+                    {
+                        <div id="collectionContainer-@(collection.EventCollectionID)" class="inner inner-custom" data-toggle="modal" data-target="#collectionEditModal" onclick="openModalEdit(@(collection.EventCollectionID),@(collection.EventId),@(collection.TypeId), '@(collection.Name)', '@(collection.Description)', '@(collection.CollectionType.Name)', false)">
+                            <h4 id="collectionName-@(collection.EventCollectionID)">@(collection.Name)</h4>
+                        </div>
+                    }
+
                     <div class="icon">
                         <i class="fa fa-users"></i>
                     </div>
@@ -157,7 +166,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 form-control-label">Loại hiển thị</label>
                     <div class="col-sm-9 input-group">
-                        <select class="form-control">
+                        <select class="form-control" id="cbType">
                             <option value="0">Hình ảnh</option>
                             <option value="1">Tập tin</option>
                         </select>
@@ -213,6 +222,14 @@
                     <p id="errorDesEdit" class="empty col-lg-offset-3">Vui lòng nhập miêu tả bộ sựu tập</p>
                 </div>
                 <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Loại:</label>
+                    <div class="col-sm-9 input-group">
+                        <div class="col-sm-9 input-group">
+                            <input id="collectionTypeName" type="text" class="form-control speaker-title" readonly >
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="col-sm-3 form-control-label">Được hiển thị</label>
                     <div class="col-sm-9 input-group">
                         <input type="checkbox" id="ckIsActiveEdit" />
@@ -258,6 +275,9 @@
 
         $(document).ready(function () {
             loadCollectionTypeToCb();
+
+            $('.menu').removeClass('menu-active');
+            $('.menu-event').addClass('menu-active');
         });
 
 
@@ -267,6 +287,10 @@
             var name = $('#txtCollectionName').val();
             var description = $('#txtDescription').val();
             var typeId = parseInt($('#cbCollectionType').val());
+            var isImage = true;
+            if ($('#cbType').val() === 1) {
+                isImage = false;
+            }
             var isActive = false;
             if ($('#ckIsActiveAdd').is(":checked")) {
                 isActive = true;
@@ -295,7 +319,8 @@
                     EventId: eventId,
                     TypeId: typeId,
                     Description: description,
-                    IsActive: isActive
+                    IsActive: isActive,
+                    IsImage: isImage
                 };
                
                 var obj = JSON.stringify(eventCollectionObj);
@@ -337,7 +362,10 @@
             var eventCollectionId = $(this).attr('value');
             var eventId = $('#txtEventId').val();
             var typeId = $('#txtTypeId').val();
-            var isActive = $('#ckIsActiveEdit').is(":checked");
+            var isActive = false;
+            if ($("#ckIsActiveEdit").prop('checked') == true) {
+                isActive = true;
+            }
 
             var name = $('#txtCollectionNameEdit').val();
             var description = $('#txtDescriptionEdit').val();
@@ -366,10 +394,17 @@
                     },
                     success: function (data) {
                         if (data.success) {
-                            swal("Thành công!", "Bạn đã cập nhật bộ sưu tập thành công", "success");
-                            $('#collectionName-' + eventCollectionId).text(name);
-                            $('#collectionContainer-' + eventCollectionId).attr('onclick', 'openModalEdit(' + eventCollectionId + ',' + eventId + ',' + typeId + ' \'' + name + '\', \'' + description + '\',' + isActive + ')');
-
+                            swal({
+                                title: "Thành công!",
+                                text: "Bạn đã cập nhật bộ sưu tập thành công",
+                                type: "success",
+                            }, function () {
+                                window.location.href = "@Url.Action("Index","ManageEvent", new { id = eventId })";
+                            });
+                            //swal("Thành công!", "Bạn đã cập nhật bộ sưu tập thành công", "success");
+                            //$('#collectionName-' + eventCollectionId).text(name);
+                            //$('#collectionContainer-' + eventCollectionId).prop('onclick', openModalEdit(eventCollectionId + ',' + eventId + ',' + typeId + ' \'' + name + '\', \'' + description + '\',' + isActive));
+                            
                         }
                         else {
                             swal("Thất bại!", "Cập nhật bộ sưu tập không thành công", "warning");
@@ -430,9 +465,11 @@
 
         $('#cbCollectionType').on('change', function () {
             var collectionType = parseInt(this.value);
-            console.log(collectionType);
             if (collectionType === -1) {
                 $('#txtCollectionTypeDiv').css('display', 'flex');
+            }
+            else {
+                $('#txtCollectionTypeDiv').css('display', 'none');
             }
         });
 
@@ -441,14 +478,18 @@
             $('#txtDescription').val("");
         }
 
-        function openModalEdit(eventCollectionId, eventId, typeId, name, description, isActive) {
+        function openModalEdit(eventCollectionId, eventId, typeId, name, description,collectionTypeName, isActive) {
             clearErrorEditCollection();
             $('#txtCollectionNameEdit').val(name);
             $('#txtDescriptionEdit').val(description);
+            $('#collectionTypeName').val(collectionTypeName);
             $('#txtEventId').val(eventId);
             $('#txtTypeId').val(typeId);
             if (isActive) {
                 $('#ckIsActiveEdit').prop('checked', true);
+            }
+            else {
+                $('#ckIsActiveEdit').prop('checked', false);
             }
 
 
@@ -461,12 +502,13 @@
                 url: '@Url.Action("GetCollectionType", "ManageEvent")',
                 method: "GET",
                 success: function (data) {
+                    console.log(data);
                     if (data.success) {
                         for (var i = 0; i < data.data.length; i++) {
                             $('#cbCollectionType').append('<option value="' + data.data[i].CollectionTypeID + '">' + data.data[i].Name +'</option>');
                         }
                         $('#cbCollectionType').append('<option value="-1">Khác</option>');
-                        disableOptionCollectionType();
+                        //disableOptionCollectionType();
                     }
                 },
                 error: function (data) {
