--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
@@ -555,6 +555,10 @@
 
             /*Xóa báo lỗi error ở modal add interaction*/
             clearErrorAddInteraction();
+
+
+            $('.menu').removeClass('menu-active');
+            $('.menu-session').addClass('menu-active');
         });
 
         function openModelUpdate(id, name, startTime, endTime, description) {
