--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
@@ -59,12 +59,13 @@ body {
 
 .container {
     position: relative;
-    top: 20%;
-    max-width: 600px;
+    top: 10%;
+    max-width: 350px;
     margin: 0 auto;
     padding: 80px 0;
-    height: 400px;
+    /*height: 400px;*/
     text-align: center;
+    border: 2px solid #005d51;
 }
 
     .container h1 {
