--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -322,6 +322,10 @@
         var urlDislikeComment = 'api/comment/DislikeComment';
         var urlUnDislikeComment = 'api/comment/UnDislikeComment';
         $(function () {
+
+            $('.custom-menu').removeClass('menu-active');
+            $('.menu-qa').addClass('menu-active');
+
             //chỉnh css cho biết thiết bị này đã like hay dislike câu hỏi , bình luận nào
             addCssForQuestion();
             addCssForComment();
