--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
@@ -97,3 +97,11 @@
 
 </body>
 </html>
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            $('.custom-menu').removeClass('menu-active');
+            $('.menu-session').addClass('menu-active');
+        });
+    </script>
+    }
