--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -52,6 +52,8 @@
     <link rel="stylesheet" href="~/Content/bootstrap-sweetalert-master/dist/sweetalert.css">
     <!--Progress Bar-->
     <link rel="stylesheet" href="~/Content/ProgressBar/css/bootstrap-progressbar-3.3.4.css">
+    <!--Toggle-->
+    <link rel="stylesheet" href="~/Content/ToggleBootstrap/toggle.css">
 
 
     <!--Custom Css-->
@@ -120,6 +122,8 @@
     <script src="~/Content/Filestack/filestack.min.js"></script>
     <!--Progress Bar-->
     <script src="~/Content/ProgressBar/bootstrap-progressbar.min.js"></script>
+    <!--Toggle-->
+    <script src="~/Content/ToggleBootstrap/toggle.js"></script>
 
 
 
