+ Làm localstorage  cho voting (mỗi người chỉ được voting 1 lần)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -130,7 +130,7 @@
 @section scripts {
     <!--Google Map-->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7Meb98e_PppAWoqobk4Ml1rFygPl9eUI&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI3acHx7HKksgtOFzCXC7BULOxXcmS-AE&callback=initMap">
     </script>
     <script>
         $(document).ready(function () {
@@ -214,7 +214,14 @@
                 //var split = latLgn.split(',');
                 $('#txtLat').val(lat);
                 $('#txtLng').val(lgn);
-               
+                marker.setMap(null);
+                var newPosition = { lat: lat, lng: lgn };
+                marker = new google.maps.Marker({
+                    draggable: true,
+                    position: newPosition,
+                    map: map,
+                    title: "Your location"
+                });
             });
 
 
