--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Register.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/Register.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "Đăng kí";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    string error = ViewBag.ExistUser;
+    string a = "";
+
 }
 <div class="container">
     <div class="ibox float-e-margins">
@@ -17,6 +20,10 @@
                 @Html.AntiForgeryToken()
 
                 @Html.ValidationSummary("", new { @class = "text-danger" })
+                if(ViewBag.ExistUser != null)
+                {
+                    <h3 style="color:red;">@(error)</h3>
+                }
                 <div class="form-group">
                     @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
@@ -38,7 +45,7 @@
                 <div class="modal-footer">
                     @*<input type="submit" class="btn btn-default" value="Register" />*@
                     <button id="btnAddGuest" type="submit" class="btn btn-primary" >Thêm</button>
-                    <a href="@Url.Action("Index", "Account")" class="btn btn-default" data-dismiss="modal">Hủy bỏ</a>
+                    <a href="@Url.Action("Index", "SystemAdmin")" class="btn btn-default" data-dismiss="modal">Hủy bỏ</a>
                 </div>
                 @*<div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
