--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/SystemAdmin.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Account/SystemAdmin.cshtml
@@ -78,6 +78,11 @@
                         <input required id="txtEmailEdit" type="email" class="form-control" placeholder="Vui lòng nhập email">
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-3">
+                        <a class="btn btn-success">Đặt lại mật khẩu</a>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" id="btnEditAdmin" class="btn btn-primary" data-dismiss="modal">Lưu</button>
