--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Cấu hình chung";
     Layout = "~/Views/Shared/_Layout.cshtml";
     int eventId = ViewBag.EventId;
+    string briefName = ViewBag.BriefName != null ? ViewBag.BriefName : "";
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
 
 }
@@ -29,7 +30,7 @@
                 <div class="icon">
                     <i class="fa fa-home"></i>
                 </div>
-                <a href="@Url.Action("Index","Home", new { id = eventId})" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="@Url.Action("Index","Home", new { briefName = briefName })" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
             </div>
 
 
@@ -107,7 +108,7 @@
                     }
 
                     <div class="icon">
-                        <i class="fa fa-users"></i>
+                        <i class="fa fa-book"></i>
                     </div>
 
 
