--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/SystemAdmin/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/SystemAdmin/Index.cshtml
@@ -10,11 +10,11 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Quản lý tài khoản người quản lý sự kiện</h2>
+                <h2 class="col-sm-10">Quản lý tài khoản người tổ chức sự kiện</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#addAdminModal" style="margin-top:20px">
+                    <a class="btn btn-custom" href="@Url.Action("Register","Account")" style="margin-top:20px">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -36,56 +36,62 @@
 
 </div>
 
-<!--Modal Add Admin-->
-<div class="modal fade" id="addAdminModal" role="dialog">
-    <div class="modal-dialog">
+<!-- Modal Update Guest -->
+<div id="updateGuestModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
 
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Thêm người tham gia</h4>
+                <h4 class="modal-title">Cập nhật thông tài khoản</h4>
             </div>
-
             <div class="modal-body">
-                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-
-                    @Html.ValidationSummary("", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Username, new { @class = "col-md-3 control-label" })
-                        <div class="col-md-9">
-                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">
+                        Tên<span class="required">*</span>
+                    </label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
+                        <input disabled required id="txtNameEdit" type="text" class="form-control" placeholder="Vui lòng nhập tên">
                     </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
-                        <div class="col-md-9">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">
+                        Số điện thoại<span class="required"></span>
+                    </label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
+                        <input required id="txtPhoneEdit" type="tel" class="form-control" placeholder="Vui lòng nhập số điện thoại">
                     </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.TelephoneNumber, new { @class = "col-md-3 control-label" })
-                        <div class="col-md-9">
-                            @Html.TextBoxFor(m => m.TelephoneNumber, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Email</label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-info" aria-hidden="true"></i>
                         </div>
+                        <input required id="txtEmailEdit" type="email" class="form-control" placeholder="Vui lòng nhập email">
                     </div>
-                    <div class="modal-footer">
-                        @*<input type="submit" class="btn btn-default" value="Register" />*@
-                        <button id="btnAddGuest" type="submit" class="btn btn-primary">Thêm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-3">
+                        <button class="btn btn-success" id="btnResetPassword">Đặt lại mật khẩu</button>
                     </div>
-                   
-                }
-
+                </div>
             </div>
-
-
+            <div class="modal-footer">
+                <button type="button" id="btnEditAdmin" class="btn btn-primary" data-dismiss="modal">Lưu</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+            </div>
         </div>
-
     </div>
 </div>
+
 @section scripts {
     <script>
 
@@ -142,6 +148,72 @@
             });
         }
 
+        function openModelUpdate(id, username, phone, email) {
+            $('#txtNameEdit').val(username);
+            $('#txtPhoneEdit').val(phone);
+            $('#txtEmailEdit').val(email);
+            $('#btnEditAdmin').attr('value', id);
+        }
+
+        function deleteUser(userId) {
+            swal({
+                title: "Bạn có chắc?",
+                text: "Bạn có chắc chắn, bạn sẽ không thể phục hồi lại!",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "Xóa!",
+                cancelButtonText: "Hủy!",
+                closeOnConfirm: false
+            },
+                function () {
+                    $.ajax({
+                        url: '@Url.Action("DeleteUser", "SystemAdmin")',
+                        method: "POST",
+                        data: {
+                            Id: userId
+
+                        },
+                        success: function (data) {
+                            reloadTable();
+                            swal("Xóa!", "Người tham gia đã được xóa thành công", "success");
+                        },
+                        error: function (data) {
+                            console.log(data);
+                            swal("Có lỗi", "Không thể xóa", "error");
+                        }
+                    });
+                });
+        }
+
+        function reloadTable() {
+            $('#tblAdmin').DataTable().ajax.reload();
+
+        }
+
+
+        $('#btnResetPassword').on('click', function () {
+            var userId = $('#btnEditAdmin').val();
+             $.ajax({
+                    url: '@Url.Action("ResetPasswordCustom", "Account")',
+                    method: "POST",
+                    data: {
+                        UserId: userId
+                    },
+                    success: function (data) {
+                        if (data.success) {
+                            swal("Thành công!", "Đã đặt lại mật khẩu cho tài khoản này", "success");
+                        }
+                        else {
+                            swal("Có lỗi", "Không đặt lại mật khẩu", "error");
+                        }
+                    },
+                    error: function (data) {
+                            console.log(data);
+                            swal("Có lỗi", "Không đặt lại mật khẩu", "error");
+                    }
+             });
+        });
     </script>
 }
 
