--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -659,7 +659,7 @@
                 listQa.find('.btn-like-question').html('0 <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>');
                 listQa.find('.btn-dislike').attr('id', 'btnDislikeQuestion-' + newQuestionId);
                 listQa.find('.btn-dislike').attr('value', newQuestionId);
-                listQa.find('.btn-dislike').html('<span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span> 0');
+                listQa.find('.btn-dislike').html('<span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span> 0');
 
                 var nameSplit = name.split(' ');
                 var firstNameChar = nameSplit[nameSplit.length - 1][0];
